# speech_data

./: .gitignore  Dockerfile  migration.sql  pyproject.toml  run.py
app/: main.py
app/api/dependencies/: auth.py
app/api/routes/: root.py  user.py
app/core/: settings.py
app/models/db/: __init__.py
app/models/schema/: measurement.py  user.py
dev/: init_db.py
